# anomaly_detector

./: README.md  anomaly_detection.py  pyproject.toml
anomaly_detector/: __init__.py  __main__.py  mad_detector.py  metric_cleaner.py
examples/: simple_example.py
tests/: test_anomaly_detection.py
