[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detector"
version = "0.1.0"
description = "Simple MAD-based anomaly detection"
authors = [{name="Example", email="example@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "plotly"
]

[project.optional-dependencies]
test = []

[tool.setuptools.packages.find]
where = ["."]
include = ["anomaly_detector*"]
